# CarsObserver

./: .gitignore  CMakeLists.txt  README.md  capturer.cpp  capturer.h  capturerfactory.cpp  capturerfactory.h  config_example.json  crosscounter.cpp  crosscounter.h  crosscounterfactory.cpp  crosscounterfactory.h  launchparams.h  main.cpp  recognizer.cpp  recognizer.h  recognizerfactory.cpp  recognizerfactory.h  tracker.cpp  tracker.h  trackerfactory.cpp  trackerfactory.h  utilities.cpp  utilities.h
recognizers/: abstractrecognizer.h  cafferecognizer.cpp  cafferecognizer.h  facerecognizer.cpp  facerecognizer.h  mobilenetssdrecognizer.cpp  mobilenetssdrecognizer.h
trackers/: abstracttracker.h  cvtracker.cpp  cvtracker.h
verifiers/: abstractverifier.h  hungarian.cpp  hungarian.h  hunverifier.cpp  hunverifier.h
